k8s-rpi-apps-traefik/middleware-basicauth-removeh.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth-remove-header
spec:
  basicAuth:
    secret: htpasswd-creds
    removeHeader: true
