k8s-rpi-apps-traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-v2
  labels:
    app.kubernetes.io/name: traefik
